# pretix-orange-money-mdg

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_orange_money_mdg/: apps.py  models.py  payment.py  signals.py  urls.py  views.py
pretix_orange_money_mdg/locale/de_Informal/LC_MESSAGES/: django.po
pretix_orange_money_mdg/migrations/: 0001_initial.py
