[project]
name = "pretix-orange-money-mdg"
dynamic = ["version"]
description = "Orange Money Madagascar payment processor plugin"
readme = "README.rst"
license = { text = "Apache" }
keywords = ["pretix"]
authors = [{ name = "Mika Andrianarijaona", email = "mikaoelitiana@gmail.com" }]
maintainers = [
  { name = "Mika Andrianarijaona", email = "mikaoelitiana@gmail.com" },
]

dependencies = ["requests"]

[project.entry-points."pretix.plugin"]
pretix_orange_money_mdg = "pretix_orange_money_mdg:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = ["setuptools", "pretix-plugin-build"]

[project.urls]
homepage = "https://github.com/mikaoelitiana/pretix-orange-money-mdg"
repository = "https://github.com/mikaoelitiana/pretix-orange-money-mdg"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pretix_orange_money_mdg.__version__" }

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
